<resources>
    <string name="app_name">VezdecodeApp</string>
    <string name="weight">Вес</string>
    <string name="energy">Энерг. ценность</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="cart_title">Корзина</string>
    <string name="empty_cart">Пусто, выберите блюда в каталоге :)</string>
    <string name="empty_cart_message">Пусто, выберите блюда в каталоге :)</string>
    <string name="searchHint">Подобрать блюда</string>
    <string name="nothing_to_show">Ничего не нашлось :(</string>
</resources>